--- a/index.html
+++ b/index.html
@@ -403,14 +403,14 @@
                 <div class="col">
                     <h2>Latest News</h2>
                     <div class="d-flex">
-                        <img src="photos/offers/1.jpg" class="cover-img">
+                        <img src="photos/offers/1.jpeg" class="cover-img">
                         <div class="l-news">
                             <p>Postformat Gallery: Multiple images</p>
                             <span>March 23,2019-3:31 pm</span>
                         </div> 
                     </div> 
                     <div class="d-flex">
-                        <img src="photos/offers/2.jpg" class="cover-img">
+                        <img src="photos/offers/2.jpeg" class="cover-img">
                         <div class="l-news">
                             <p>Snowboarding is fun!</p>
                             <span>July 22,2019-7:17 am</span>
